Финальная доработка на спринте 5